ui: Fix CSS of "terms of service" error.
The red_notice that appears when "terms of service" checkbox is not
checked is misaligned as shifts the checkbox when it appears. This gives
a frustating user experience. This commit fixes css of that red_notice.

--- a/static/styles/portico/portico-signin.scss
+++ b/static/styles/portico/portico-signin.scss
@@ -287,11 +287,12 @@ html {
     .terms-of-service .text-error {
         position: relative;
         display: block;
-        top: -5px;
+        top: 20px;
         padding: 0;
         height: 0;
+        left: 1px;
 
-        font-size: 0.7em;
+        font-size: 0.75em;
         font-weight: 600;
     }
 }
